[project]
name = "content-safety-ops-api"
version = "0.1.0"
description = "Policy rule based content moderation API for operations teams"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "fastapi==0.115.4",
    "httpx==0.27.2",
    "psycopg2-binary==2.9.10",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "redis==5.2.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
]

[project.optional-dependencies]
test = [
    "httpx==0.27.2",
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
